src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__hardware_access_types_annotated-4.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: annotations.get(right).unwrap()
---
Variable {
    resulting_type: "BOOL",
    qualified_name: "__G_1_4",
    constant: false,
    argument_type: ByVal(
        Global,
    ),
    auto_deref: None,
}
