src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__resolve_recursive_function_call.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: annotated_types
---
{
    1: Function {
        return_type: "DINT",
        qualified_name: "foo",
        call_name: None,
    },
    3: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.var1",
        constant: false,
        argument_type: ByVal(
            Local,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
    2: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.input1",
        constant: false,
        argument_type: ByVal(
            Input,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
    6: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.var2",
        constant: false,
        argument_type: ByVal(
            Local,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
    5: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.inout1",
        constant: false,
        argument_type: ByRef(
            InOut,
        ),
        is_auto_deref: true,
        accessing_type: None,
    },
    8: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.output1",
        constant: false,
        argument_type: ByRef(
            Output,
        ),
        is_auto_deref: true,
        accessing_type: None,
    },
    9: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.var3",
        constant: false,
        argument_type: ByVal(
            Local,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
    12: Value {
        resulting_type: "DINT",
    },
    14: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.var1",
        constant: false,
        argument_type: ByVal(
            Local,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
    13: Variable {
        resulting_type: "DINT",
        qualified_name: "foo.foo",
        constant: false,
        argument_type: ByVal(
            Return,
        ),
        is_auto_deref: false,
        accessing_type: None,
    },
}
