src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__resolve_recursive_program_call.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
assertion_line: 3198
expression: annotated_types
---
{
    1: Program {
        qualified_name: "mainProg",
    },
    3: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.var1",
        constant: false,
        variable_type: Local,
        is_auto_deref: false,
    },
    2: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.input1",
        constant: false,
        variable_type: Input,
        is_auto_deref: false,
    },
    6: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.var2",
        constant: false,
        variable_type: Local,
        is_auto_deref: false,
    },
    5: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.inout1",
        constant: false,
        variable_type: InOut,
        is_auto_deref: true,
    },
    8: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.output1",
        constant: false,
        variable_type: Output,
        is_auto_deref: false,
    },
    9: Variable {
        resulting_type: "DINT",
        qualified_name: "mainProg.var3",
        constant: false,
        variable_type: Local,
        is_auto_deref: false,
    },
}
